manifests/concourse-postgresql-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: concourse-postgresql
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        name: concourse-postgresql
    spec:
      containers:
      - name: concourse-postgresql
        image: postgres
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgresql-storage
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgresql-storage
        emptyDir: {}
