manifests/concourse-web-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: concourse-web
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: concourse-web
    spec:
      containers:
      - name: concourse-web
        image: vyshane/concourse-web
        ports:
        - containerPort: 8080
          name: atc
        - containerPort: 2222
          name: tsa
        volumeMounts:
        - name: concourse-secrets
          mountPath: /etc/secrets/concourse
          readOnly: true
        - name: postgresql-secrets
          mountPath: /etc/secrets/postgresql
          readOnly: true
      volumes:
      - name: concourse-secrets
        secret:
          secretName: concourse-secrets
      - name: postgresql-secrets
        secret:
          secretName: concourse-postgresql-secrets
