manifests/concourse-worker-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: concourse-worker
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: concourse-worker
    spec:
      containers:
      - name: concourse-worker
        args:
        - worker
        image: concourse/concourse
        securityContext:
          privileged: true
        volumeMounts:
        - name: concourse-secrets
          mountPath: /etc/secrets/concourse
          readOnly: true
        - name: work-directory
          mountPath: /opt/concourse/worker
      volumes:
      - name: concourse-secrets
        secret:
          secretName: concourse-secrets
      - name: work-directory
        emptyDir: {}  # You will probably want persistent storage in production
