manifests/concourse-web-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: concourse-web
spec:
  ports:
  - port: 8080
    name: atc
    nodePort: 31080
  - port: 2222
    name: tsa
  selector:
    name: concourse-web
  type: NodePort
