manifests/concourse-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: concourse
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: concourse-web
          servicePort: 8080
